pkg/i2gw/providers/traefik/fixtures/output/1-router-tls-websecure.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik
  namespace: default
spec:
  gatewayClassName: traefik
  listeners:
  - name: foo-example-com-http
    hostname: foo.example.com
    port: 80
    protocol: HTTP
  - name: foo-example-com-https
    hostname: foo.example.com
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: foo-example-com-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-app-foo-example-com-http
  namespace: default
spec:
  parentRefs:
  - name: traefik
    namespace: default
    sectionName: foo-example-com-http
  hostnames:
  - foo.example.com
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-app-foo-example-com
  namespace: default
spec:
  parentRefs:
  - name: traefik
    namespace: default
    sectionName: foo-example-com-https
  hostnames:
  - foo.example.com
  rules:
  - name: rule-0
    matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: my-app
      port: 8080
