pkg/i2gw/providers/traefik/fixtures/output/3-unknown-annotation.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik
  namespace: default
spec:
  gatewayClassName: traefik
  listeners:
  - name: foo-example-com-http
    hostname: foo.example.com
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-app-foo-example-com
  namespace: default
spec:
  parentRefs:
  - name: traefik
  hostnames:
  - foo.example.com
  rules:
  - name: rule-0
    matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: my-app
      port: 8080
